# WatchIt

./: .env  .gitignore  Brewfile  Makefile  README.md  child_monitor.db  dashboard.py  pyproject.toml  requirements.txt  setup.sh
analysis/: graph.py  llm_judge copy.py  llm_judge.py  ocr_asr.py  safety.py
analysis/agents/: __init__.py  headlines_agent.py  ocr_agent.py  planner_agent.py  policy_agent.py  url_agent.py
app/: api_models.py  main.py  sse.py
core/: activity_logger.py  config.py  db.py  pg.py  screenshot_store.py  types.py
extension_chromium/: background.js  content.js  manifest copy.json  manifest.json
policy/: engine.py
runtime/: bootstrap.py  guardian_learning.py  pg_replicator.py  queue.py
ui/: package-lock.json  package.json
ui/app/: page.tsx
ui/lib/: firebase.ts
