[project]
name = "watchit"
version = "0.2.0"
description = "Local parental monitoring with agentic LLM judge (Ollama)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1",
  "hypercorn>=0.16",
  "uvloop>=0.19; platform_system!='Windows'",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.4,<3",
  "orjson>=3.10",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "sse-starlette>=2.1.0",
  "langchain>=0.2.7,<0.3",
  "langchain-community>=0.2.7,<0.3",
  "langgraph>=0.2.30,<0.3",

  # SQLCipher
  "pysqlcipher3-binary>=1.0.4",

  # OCR (PaddleOCR)
  "pillow>=10.3",
  "paddleocr>=2.7.0.3",
  "paddlepaddle==2.6.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "paddlepaddle>=2.5.2; sys_platform == 'darwin' and platform_machine != 'arm64'",
  "psycopg[binary]>=3.1",
]
